--- a/frontend/PageHTML/MainPage/MainPage.css
+++ b/frontend/PageHTML/MainPage/MainPage.css
@@ -90,8 +90,12 @@ footer {
     padding-top: 60px;
     width: 100%;
     height: 1165px;
-    /*background-image: url;*/
-    background: #000;
+    background-image: url('../../Assets/12.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+
+    /*background: #000;*/
     ul {
         display: flex;
         gap: 200px;
@@ -108,6 +112,9 @@ footer {
                 border: none;
                 text-align: left;
                 color: white;
+                width: 70px;
+                border-bottom: 1px solid white;
+                
             }
         }
     }
